tests/error/struct_errors/keywords.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct(metaclass=type):
    x: int


MyStruct.compile()
