tests/error/struct_errors/keywords.err
Error: Unexpected keyword (at $FILE:5:15)
  | 
3 | 
4 | @guppy.struct
5 | class MyStruct(metaclass=type):
  |                ^^^^^^^^^^^^^^ Unexpected keyword

Guppy compilation failed due to 1 previous error
